# ChangeLog for media-video/vlc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.754 2011/12/06 13:27:15 aballier Exp $

  06 Dec 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
  fix libbluray dep

  06 Dec 2011; Alexis Ballier <aballier@gentoo.org> vlc-1.1.12.ebuild,
  vlc-1.1.9999.ebuild, vlc-1.2.0_pre1.ebuild, vlc-9999.ebuild:
  improve font deps, by Luke-Jr, bug #392689: use any ttf font when fontconfig
  is enabled and force dejavu if not because its accessed by path

  11 Nov 2011; Alexis Ballier <aballier@gentoo.org> vlc-1.1.12.ebuild,
  vlc-1.1.9999.ebuild:
  libnotify plugin requires gtk+:2 even on 1.1, bug #386743 by
  paul.wap@gmail.com

  06 Nov 2011; Alexis Ballier <aballier@gentoo.org> -vlc-1.1.11.ebuild:
  remove old

  05 Nov 2011; Raúl Porcel <armin76@gentoo.org> vlc-1.1.12.ebuild:
  alpha/sparc stable wrt #385953

*vlc-1.2.0_pre1 (04 Nov 2011)

  04 Nov 2011; Alexis Ballier <aballier@gentoo.org> +vlc-1.2.0_pre1.ebuild,
  vlc-9999.ebuild:
  bump pre release and use upstreams .tar.xz tarballs

  31 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> vlc-1.1.11.ebuild,
  vlc-1.1.12.ebuild, vlc-1.1.9999.ebuild:
  Rename USE="v4l2" to USE="v4l" while removing support for video4linux 1.x wrt
  #385241

  09 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> vlc-1.1.12.ebuild:
  ppc/ppc64 stable wrt #385953

  09 Oct 2011; Markos Chandras <hwoarang@gentoo.org> vlc-1.1.12.ebuild:
  Stable on amd64 wrt bug #385953

  08 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> vlc-1.1.12.ebuild:
  x86 stable wrt bug #385953

  06 Oct 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
  remove old libX11 and samba deps

*vlc-1.1.12 (06 Oct 2011)

  06 Oct 2011; Alexis Ballier <aballier@gentoo.org> +vlc-1.1.12.ebuild:
  version bump

  22 Sep 2011; Alexis Ballier <aballier@gentoo.org> vlc-1.1.11.ebuild,
  vlc-1.1.9999.ebuild, vlc-9999.ebuild: