@@ -45,6 +45,7 @@
 	<flag name="macosx-eyetv">Enables Mac OS X EyeTV (TNT Tuner) module.</flag>
 	<flag name="macosx-quartztext">Enables Mac OS X quartz text module.</flag>
 	<flag name="macosx-qtcapture">Enables Mac OS X qtcapture (iSight) module.</flag>
+	<flag name="macosx-qtkit">Enables Mac OS X qtkit module: qtcapture (video) and qtsound (audio) module.</flag>
 	<flag name="macosx-vout">Enables Mac OS X video output module.</flag>
 	<flag name="matroska">Enables matroska support using reference libraries (fallback on other existing matroska support if disabled, i.e., matroska enabled FFmpeg)</flag>
 	<flag name="media-library">Build the (sqlite based) media library.</flag>
