@@ -1,6 +1,10 @@
 # ChangeLog for media-video/vlc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.754 2011/12/06 13:27:15 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.755 2011/12/06 13:32:21 aballier Exp $
+
+  06 Dec 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
+  metadata.xml:
+  macosx-qtcapture has been renamed to macosx-qtkit
 
   06 Dec 2011; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild:
   fix libbluray dep
